TestData/testdata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "testdata-ingress"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: project-testdata
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=180
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:433177513144:certificate/d93da74b-62d6-4b3f-90a0-467808672672
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-2021-06
    alb.ingress.kubernetes.io/healthcheck-path: /
    kubernetes.io/ingress.class: alb
  labels:
    app: web-server
    env: pro
    partition: web-server
spec:
  tls:
  - hosts:
    - testdata.demoservices.online
  rules:
    - host: 
      http:
        paths:
          - backend:
              service: 
                name: "svc-testdataapp"
                port: 
                  number: 8080
            path: /*
            pathType: ImplementationSpecific
